--- a/Grafana-Promothenus-nodeexporter.yml
+++ b/Grafana-Promothenus-nodeexporter.yml
@@ -1,17 +1,23 @@
-grafana:
-    image: grafana/grafana:6.7.2
-    container_name: grafana
+version: "3.7"
+services:
+  prometheus:
+    image: prom/prometheus:latest
     volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning
-    environment:
-      - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
-      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - GF_USERS_ALLOW_SIGN_UP=false
+            - ~/prometheus-grafana/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+  grafana:
+    image: grafana/grafana:7.4.5-ubuntu
+    volumes:
+            - ~/prometheus-grafana/grafana/grafana.ini:/etc/grafana/grafana.ini
+            - ~/prometheus-grafana/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yaml
+    ports:
+      - 3000:3000
+    links:
+            - prometheus
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: monitoring_node_exporter
     restart: unless-stopped
     expose:
-      - 3000
-    networks:
-      - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"  
+      - 9100
