--- a/Grafana-Promothenus-nodeexporter.yml
+++ b/Grafana-Promothenus-nodeexporter.yml
@@ -3,18 +3,29 @@ services:
   prometheus:
     image: prom/prometheus:latest
     volumes:
-            - ~/prometheus-grafana/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+            - /opt/prometheus-grafana/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
   grafana:
     image: grafana/grafana:7.4.5-ubuntu
     volumes:
-            - ~/prometheus-grafana/grafana/grafana.ini:/etc/grafana/grafana.ini
-            - ~/prometheus-grafana/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yaml
+            - /opt/prometheus-grafana/grafana/grafana.ini:/etc/grafana/grafana.ini
+            - /opt/prometheus-grafana/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yaml
     ports:
       - 3000:3000
     links:
             - prometheus
+  cadvisor:
+    image: 'google/cadvisor:latest'
+    container_name: cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk:/dev/disk/:ro
+    ports:
+    - '8080:8080'
   node-exporter:
     image: prom/node-exporter:latest
     container_name: monitoring_node_exporter
